# assistant

./: .gitignore  LICENSE.md  README.md  links  prompt  pyproject.toml  reference  reference.yaml
answer/: boundary  initial  step  sync
assistant/api/: cli.py
bookshelf/: __init__.py
bookshelf/api/: cli.py
docs/: .buildinfo  Makefile  build.sh  clean.sh  genindex.html  index.html  objects.inv  requirements.txt  search.html  searchindex.js
docs/.doctrees/: environment.pickle
docs/_sources/: index.md.txt
docs/dirhtml/: .buildinfo  index.html  objects.inv
docs/dirhtml/_static/: documentation_options.js
docs/dirhtml/genindex/: index.html
docs/dirhtml/search/: index.html
docs/doctrees/: environment.pickle  index.doctree
docs/html/: .buildinfo  genindex.html  index.html  search.html
docs/html/_static/: documentation_options.js  termynal.html
docs/source/: conf.py  index.md  index.rst
docs/source/_static/js/: custom.js
prompt/: boundary  initial  step  sync
reference/: gmsh.html
src/: __init__.py  __main__.py  assistant.py  bookshelf.py  cli.py  input.py  myapp.py  test_inpu.py  trans.py  ui.py
src/assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sample/: ai.py  assistant.py  parge.py  parge_trans.py  sample.py  sample1.py  trans.py
test/: test_bookshelf.py  test_cli.py
tutorial/: t_chromadb.py  t_multiqueryretriever.py  t_vectorindex.py  t_webresearchretriever.py  todo.md
tutorial/db/: chroma.sqlite3
