[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "assistant"
authors = [
    {name = "sakakibara yuuki", email = "sakakilabo0000@gmail.com"},
]
description = "This is my dream"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Framework :: LangChain",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "openai",
    "langchain",
    "chromadb",
    "tiktoken",
    "sentence_transformers",
    "google-search-results",
    "unstructured",
    "extract_msg",
    "beautifulsoup4",
    "deepl",
    "pypdf",
    "click",
    "black",
    "pydantic",
    "streamlit",
    "esprima",
    "markdown",
    "fake_useragent",
    "rich",
    "pyyaml",
    "flake8",
    "isort",
    "sphinx",
    "furo",
]

dynamic = ["version"]
