[build-system]
requires = ["setuptools", "setuptools-scm"]

[project]
name = "bookshelf"
authors = [
    {name = "sakakibara yuuki", email = "sakakilabo0000@gmail.com"},
]
description = 'This is my "power"'
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Framework :: LangChain",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "openai",
    "langchain",
    "chromadb",
    "tiktoken",
    "sentence_transformers",
    "google-search-results",
    "unstructured",
    "extract_msg",
    "beautifulsoup4",
    "deepl",
    "pypdf",
    "click",
    "pydantic",
    "streamlit",
    "esprima",
    "markdown",
    "fake_useragent",
    "rich",
    "pyyaml",
    "pdfminer",
]

dynamic = ["version"]

[project.optional-dependencies]
utils = [
  "flake8",
  "isort",
  "black",
]
test = [
  "pytest",
]


[project.scripts]
bookshelf = "bookshelf:cli"

[tool.setuptools]
packages = ["bookshelf"]
